--- a/Inspec.yml
+++ b/Inspec.yml
@@ -1,23 +1,18 @@
-name: NGINX Based on Apache 2.2 Server for UNIX Security Technical Implementation Guide
-title: NGINX Based on Apache 2.2 Server for UNIX Security Technical Implementation Guide
+name: cms-ars-3.1-moderate-wildfly-stig-overlay
+title: .
 maintainer: The CMS InSpec Dev Teams
-copyright: (c) 2018 The MITRE Corporation
-copyright_email: inspec@mitre.org
+copyright: .
+copyright_email: 
 license: Apache-2.0
-summary: CMS ARS 3.1 overlay for NGINX based on Apache 2.2 Server for UNIX DISA STIG.
+summary: .
 version: 0.1.0
 
 depends:
-- name: nginx-baseline
-  git: https://github.com/mitre/nginx-baseline
+- name: wildfly-stig-baseline
+  git: https://github.com/mitre/wildfly-stig-baseline
   branch: master
 
 attributes:
-- name: nginx_conf_file	
-  description: Path for the nginx configuration file
-  type: string
-  default: '/etc/nginx/nginx.conf'
-
 - name: connection
   description: 'Minimum Web vendor-supported version.'
   type: string
@@ -39,6 +34,7 @@ attributes:
            
 - name: superuser_role_users
   description: 'List of authorized users with the SuperUser role.'
+  type: array
   default: %w[
             user-superuser 
             user-$local
@@ -47,7 +43,9 @@ attributes:
 - name: auditor_group_users
   description: 'List of  authorized auditor users.'
   type: array
-  default: %w[user-auditor]
+  default: %w[
+            user-auditor
+            ]
            
 - name: wildfly_group
   description: 'group owner of files/directories'
@@ -61,7 +59,10 @@ attributes:
   
 - name: approved_applications
   description: 'List of  authorized applications.'
-  default: %w[sample.war]
+  type: array
+  default: %w[
+            sample.war
+            ]
 
 - name: auditor_group_users
   description: 'List of  authorized nginx modules.'
@@ -71,53 +72,58 @@ attributes:
             jboss.management.https.port=9993                                                                                             
             jboss.http.port=8080                                                                                                         
             jboss.https.port=8443                                                                                                        
-            jboss.ajp.port=8009                                                                                                          
-                                                                                                                                         
-           ]
+            jboss.ajp.port=8009                                                                                                                                                                                                                                      
+            ]
            
 - name: auditor_role_users
   description: 'List of authorized users with the auditor role.',
   type: array
   default: [
-            "user-auditor"
+           "user-auditor"
            ]
 
 - name: administrator_role_users
   description: 'List of authorized users with the administrator role.'
   type: array
   default: [
-            "user-admin"
+           "user-admin"
            ]
 
 - name: superuser_role_users
   description: 'List of authorized users with the SuperUser role.'
   type: array
   default: [
-            "user-$local",
-            "user-superuser"
+           "user-$local",
+           "user-superuser"
            ]
 
 -name: deployer_role_users
   description: 'List of authorized users with the deployer role.'
   type: array
   default: [
-            "user-deployer"
+           "user-deployer"
            ]
            
 -name: maintainer_role_users
   description: 'List of authorized users with the maintainer role.'
   type: array
-  default: ["user-maintainer"]
+  default: [
+           "user-maintainer"
+           ]
 
 -name: monitor_role_users
   description: 'List of authorized users with the monitor role.'
   type: array
-  default: ["user-monitor"]
+  default: [
+           "user-monitor"
+           ]
   
 -name: operator_role_users
   description: 'List of authorized users with the operator role.'
   type: array
-  default: ["user-operator"]
+  default: [
+           "user-operator"
+           ]
 
 -name: ldap
   description: 'Minimum Web vendor-supported version.'
