--- a/inspec.yml
+++ b/inspec.yml
@@ -1,4 +1,4 @@
-name: cms-ars-3.1-moderate-wildfly-stig-overlay
+name: cms-ars-3.1-moderate-red-hat-jboss-eap-6.3-stig-overlay
 title: .
 maintainer: The CMS InSpec Dev Teams
 copyright: .
